Major overhaul -- bug fixes

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -9,24 +9,221 @@ SOFTWARE="/hpc/local/CentOS7/dhl_ec/software"
 #
 # REQUIRED: Path_to where GWASToolKit resides on the server. 
 GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
-GWASTOOLKITSCRIPTS=${GWASTOOLKITDIR}/SCRIPTS
 #
-# REQUIRED: Path_to where the main manalysis directory resides.
-PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/aaags"
+# REQUIRED: Path_to support programs on the server
+### Set location of SNPTEST v2.5.2 & the method to be used.
+SNPTEST="${SOFTWARE}/snptest_v2.5.2_CentOS6.5_x86_64_static/snptest_v2.5.2"
+PLINK2="${SOFTWARE}/plink_v1.9"
+LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
+#
+# REQUIRED: qsub settings -- these should work universally
+# FOR GWAS
+QMEMGWAS="h_vmem=8G" # '8Gb' for GWAS 
+QTIMEGWAS="h_rt=12:00:00" # 12 hours for GWAS 
+QMEMGWASCLUMP="h_vmem=180G" # 180Gb needed for clumping
+QTIMEGWASCLUMP="h_rt=48:00:00" # 12 hours for clumping
+QMEMGWASPLOT="h_vmem=8G" # 4gb for snptest plotter
+QTIMEGWASPLOT="h_rt=12:00:00" # 4 hours for plotter
+QMEMGWASPLOTQC="h_vmem=8G" # 4gb for plotter qc
+QTIMEGWASPLOTQC="h_rt=12:00:00" # 4 hours for plotter qc
+QMEMGWASLZOOM="h_vmem=4G" # 4Gb needed for locuszoom
+QTIMEGWASLZOOM="h_rt=01:00:00" # 15mins for locuszoom
+QMEMGWASCLEANER="h_vmem=4G" # 4Gb needed for cleaner
+QTIMEGWASCLEANER="h_rt=01:00:00" # 1hours to clean
+#
+# FOR VARIANT
+QMEMVAR="h_vmem=8G" # 8Gb for variants
+QTIMEVAR="h_rt=00:15:00" # 15mins for variants
+QMEMVARCLEANER="h_vmem=4G" # 4Gb needed for cleaner
+QTIMEVARCLEANER="h_rt=01:00:00" # 1hours to clean
+#
+# FOR REGION
+QMEMREG="h_vmem=8G" # 8Gb for regions
+QTIMEREG="h_rt=00:30:00" # 30mins for regions
+QMEMREGCLEANER="h_vmem=4G" # 4Gb needed for cleaner
+QTIMEREGCLEANER="h_rt=01:00:00" # 1hours to clean
+#
+# FOR GENE
+QMEMGENE="h_vmem=8G" # 8Gb for genes
+QTIMEGENE="h_rt=00:30:00" # 30 minutes for genes
+QMEMGENEQC="h_vmem=4G" # 4 Gb for snptest qc
+QTIMEGENEQC="h_rt=00:30:00" # 30 minutes for snptest qc
+QMEMGENELZOOM="h_vmem=4G" # 4Gb for locuszoom
+QTIMEGENELZOOM="h_rt=00:15:00" #15mins for locuszoom
+QMEMGENECLEANER="h_vmem=4G" # 4Gb needed for cleaner
+QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
+#
+# REQUIRED: mailing settings
+# you're e-mail address; you'll get an email when the job has ended or when it was aborted
+# 'b' Mail is sent at the beginning of the job; 
+# 'e' Mail is sent at the end of the job; 
+# 'a' Mail is sent when the job is aborted or rescheduled.
+# 's' Mail is sent when the job is suspended;
+# 'n' No mail is sent.
+YOUREMAIL="YOUREMAIL@COMPANY.COM" 
+MAILSETTINGS="a" 
+#
+# ANALYSIS SETTINGS
+# REQUIRED: Path_to where the main alysis directory resides.
+PROJECTDIR="/hpc/dhl_ec/YOURNAME/DIR1/DIR2"
 #
 # REQUIRED: Name of the project.
-PROJECTNAME="aaags_diam"
+PROJECTNAME="PROJECTNAME"
 #
 # REQUIRED: Analysis settings.
 # You can choose one of these options [GWAS/VARIANT/REGION/GENES].
-ANALYSIS_TYPE="GWAS"
+ANALYSIS_TYPE="VARIANT"
 # You can choose one of these options [AEGS/AAAGS/CTMM].
 STUDY_TYPE="AAAGS"
+#
+# REQUIRED: give a list of covariates in a file
+# Example covariate-list format:
+# COHORT Age sex PC1_2013 PC2_2013 PC3_2013 PC4_2013 PC5_2013 PC6_2013 PC7_2013 PC8_2013 PC9_2013 PC10_2013
+COVARIATE_FILE="${PROJECTDIR}/covariates.txt"
+#
+# REQUIRED: give a list of phenotypes to be analyzed
+PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
+#
+# SPECIFIC DATA SETTINGS
+# REQUIRED: location of [imputed] data to use.
+# ### AEGS, 1000G phase 3, GoNL5
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
+# ### AEGS, 1000G phase 1
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_1000Gp1v3/aegs_combo_1000g_RAW_chr"
+# ### AEGS, GoNL4
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_GoNL4/aegs_combo_gonl4_RAW_chr"
+### AAAGS, 1000G phase 3, GoNL5
+IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
+# ### CTMMGS, 1000G phase 3, GoNL5
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_1kGp3GoNL5_RAW_chr"
+#
+# REQUIRED: location of sample file.
+	### Set the phenotype file:
+# ### AEGS
+# SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegscombo_phenocov.sample"
+# ### AAAGS
+SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_phenocov.sample"
+# ### CTMMGS
+# SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_phenocov.sample"
+#
+# REQUIRED: exclusion-lists 
+### SampleID123X
+### SampleID123Y
+### SampleID123Z
+#
+# ### AEGS specific exclusion lists
+# ### EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA.list
+# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_Females.list
+# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_Males.list
+# ### EXCLUSION="EXCL_CKD"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_CKD.list
+# ### EXCLUSION="EXCL_NONCKD"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonCKD.list	
+# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_T2D.list
+# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonT2D.list
+# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_SMOKER.list
+# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonSMOKER.list
+# ### EXCLUSION="EXCL_PRE2007"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_pre2007.list
+# ### EXCLUSION="EXCL_POST2007"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_post2007.list
+
+# ### AAAGS specific exclusion lists
+EXCLUSION="EXCL_DEFAULT"
+EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS.list"
+# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Females.list"
+# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Males.list"
+# ### EXCLUSION="EXCL_CKD" -- does not exist yet
+# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_CKD.list"
+# ### EXCLUSION="EXCL_NONCKD" -- does not exist yet
+# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonCKD.list"
+# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_T2D.list"
+# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonT2D.list"
+# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_SMOKER.list"
+# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonSMOKER.list"
+
+### CTMMGS specific exclusion lists
+# ### EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM.list"
+# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_FEMALES.list"
+# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_MALES.list"
+# ### EXCLUSION="EXCL_CKD" -- does not exist yet
+# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
+# ### EXCLUSION="EXCL_NONCKD" -- does not exist yet
+# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
+# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_T2D.list"
+# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonT2D.list"
+# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_SMOKER.list"
+# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonSMOKER.list"
+
+# REQUIRED: ANALYSIS SPECIFIC ARGUMENTS
+# For per-variant analysis
+# EXAMPLE FORMAT
+# rs1234 1 12345567
+# rs5678 2 12345567
+# rs4321 14 12345567
+# rs9876 20 12345567
+VARIANTLIST="${PROJECTDIR}/variantlist.txt"
+#
+# REQUIRED: For GWAS, GENE, REGIONAL, and VARIANT analyses -- options: [STANDARDIZE/RAW]
+STANDARDIZE="STANDARDIZE"
+# You can choose one of these options [expected/score] -- expected is likely best; refer to SNPTEST documentation.
+METHOD="expected"
+#
+# REQUIRED: For GWAS
+CLUMP_P2="1"
+CLUMP_P1="0.000005" # should be of the form 0.005 rather than 5e-3
+CLUMP_R2="0.2"
+CLUMP_KB="500"
+CLUMP_FIELD="P"
+#
+# REQUIRED: For regional analysis
+CHR="1" # e.g. 1
+REGION_START="154376264" # e.g. 154376264
+REGION_END="154476264" # e.g. 154476264
+#
+# REQUIRED: For per-gene analysis
+GENES_FILE="${PROJECTDIR}/genelist.txt"
+#
+# REQUIRED: For GWAS/REGION/GENE analysis
+RANGE="500000" # 500000=500kb, needed for GWAS (LocusZoom plots); and GENE analyses (analysis and LocusZoom plots)
+#
+# REQUIRED: Filter settings -- specifically, GWAS, GENE and REGIONAL analyses
+INFO="0.3"
+MAC="6"
+CAF="0.005"
+BETA_SE="100"
+#
+### SYSTEM REQUIRED | NEVER CHANGE
+OUTPUT_DIR=${PROJECT}/snptest_results 
+VARIANTID="2"
+PVALUE="17"
+RANGELZ=$(expr "$RANGE" / 1000)
+#
+# REQUIRED: References -- new version will make these on the fly
 # You can choose one of these options [1kGp3v5GoNL5/1kGp1v3/GoNL4].
 REFERENCE="1kGp3v5GoNL5"
-# You can choose one of these options [EXPECTED/SCORE] -- EXPECTED is likely best.
-METHOD="EXPECTED"
-# You can choose one of these options [EXCL_DEFAULT/EXCL_FEMALES/EXCL_MALES/EXCL_CKD/EXCL_NONCKD/EXCL_T2D/EXCL_NONT2D/EXCL_SMOKER/EXCL_NONSMOKER/EXCL_PRE2007/EXCL_POST2007].
-EXCLUSION="EXCL_DEFAULT"
+REFERENCEDATA="${GWASTOOLKITDIR}/RESOURCES/1000Gp3v5_EUR/1000Gp3v5.20130502.EUR"
+HG19_GENES="${GWASTOOLKITDIR}/RESOURCES/glist-hg19"
+
 
 
