--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -60,19 +60,19 @@ QTIMEGENECLEANER="h_rt=01:00:00" # 1hours to clean
 # 'a' Mail is sent when the job is aborted or rescheduled.
 # 's' Mail is sent when the job is suspended;
 # 'n' No mail is sent.
-YOUREMAIL="YOUREMAIL@COMPANY.COM" 
+YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl" 
 MAILSETTINGS="a" 
 #
 # ANALYSIS SETTINGS
 # REQUIRED: Path_to where the main alysis directory resides.
-PROJECTDIR="/hpc/dhl_ec/YOURNAME/DIR1/DIR2"
+PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/aaags"
 #
 # REQUIRED: Name of the project.
-PROJECTNAME="PROJECTNAME"
+PROJECTNAME="DIAMETER"
 #
 # REQUIRED: Analysis settings.
 # You can choose one of these options [GWAS/VARIANT/REGION/GENES].
-ANALYSIS_TYPE="VARIANT"
+ANALYSIS_TYPE="GENES"
 # You can choose one of these options [AEGS/AAAGS/CTMM].
 STUDY_TYPE="AAAGS"
 #
