--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -110,50 +110,58 @@ SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_p
 ### SampleID123X
 ### SampleID123Y
 ### SampleID123Z
-#
+
 # ### AEGS specific exclusion lists
-# ### EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION="EXCL_DEFAULT"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA.list
-# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_Females.list
-# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION="EXCL_MALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_Males.list
-# ### EXCLUSION="EXCL_CKD"
+# EXCLUSION="EXCL_CKD"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_CKD.list
-# ### EXCLUSION="EXCL_NONCKD"
+# EXCLUSION="EXCL_NONCKD"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonCKD.list	
-# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_T2D.list
-# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION="EXCL_NONT2D"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonT2D.list
-# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION="EXCL_SMOKER"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_SMOKER.list
-# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonSMOKER.list
-# ### EXCLUSION="EXCL_PRE2007"
+# EXCLUSION="EXCL_PRE2007"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_pre2007.list
-# ### EXCLUSION="EXCL_POST2007"
+# EXCLUSION="EXCL_POST2007"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_post2007.list
+# EXCLUSION="EXCL_DIURETICS"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_DIURETICS.list
+# EXCLUSION="EXCL_NONDIURETICS"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonDIURETICS.list
 
 # ### AAAGS specific exclusion lists
-EXCLUSION="EXCL_DEFAULT"
-EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS.list"
-# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS.list"
+# EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Females.list"
-# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION="EXCL_MALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Males.list"
-# ### EXCLUSION="EXCL_CKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_CKD.list"
-# ### EXCLUSION="EXCL_NONCKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonCKD.list"
-# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION="EXCL_CKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_CKD.list"
+# EXCLUSION="EXCL_NONCKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonCKD.list"
+# EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_T2D.list"
-# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION="EXCL_NONT2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonT2D.list"
-# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION="EXCL_SMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_SMOKER.list"
-# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonSMOKER.list"
+EXCLUSION="EXCL_DIURETICS"
+EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_DIURETICS.list"
+# EXCLUSION="EXCL_NONDIURETICS"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonDIURETICS.list"
 
 ### CTMMGS specific exclusion lists
 # ### EXCLUSION="EXCL_DEFAULT"
@@ -174,6 +182,10 @@ EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/excl
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_SMOKER.list"
 # ### EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonSMOKER.list"
+# EXCLUSION="EXCL_DIURETICS"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_DIURETICS.list"
+# EXCLUSION="EXCL_NONDIURETICS"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonDIURETICS.list"
 
 # REQUIRED: ANALYSIS SPECIFIC ARGUMENTS
 # For per-variant analysis
