--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -65,16 +65,16 @@ MAILSETTINGS="a"
 #
 # ANALYSIS SETTINGS
 # REQUIRED: Path_to where the main alysis directory resides.
-PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/aaags"
+PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/lookups/cyp2c19"
 #
 # REQUIRED: Name of the project.
-PROJECTNAME="DIAMETER"
+PROJECTNAME="CYP2C19"
 #
 # REQUIRED: Analysis settings.
 # You can choose one of these options [GWAS/VARIANT/REGION/GENES].
-ANALYSIS_TYPE="GENES"
+ANALYSIS_TYPE="VARIANT"
 # You can choose one of these options [AEGS/AAAGS/CTMM].
-STUDY_TYPE="AAAGS"
+STUDY_TYPE="CTMM"
 #
 # REQUIRED: give a list of covariates in a file
 # Example covariate-list format:
@@ -85,7 +85,7 @@ COVARIATE_FILE="${PROJECTDIR}/covariates.txt"
 PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 #
 # SPECIFIC DATA SETTINGS
-# REQUIRED: location of [imputed] data to use.
+# REQUIRED: location of [imputed] data to use -- all BGEN-format.
 # ### AEGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
 # ### AEGS, 1000G phase 1
@@ -93,18 +93,18 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 # ### AEGS, GoNL4
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_GoNL4/aegs_combo_gonl4_RAW_chr"
 ### AAAGS, 1000G phase 3, GoNL5
-IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
+# IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
 # ### CTMMGS, 1000G phase 3, GoNL5
-# IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_1kGp3GoNL5_RAW_chr"
+IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_1kGp3GoNL5_RAW_chr"
 #
 # REQUIRED: location of sample file.
 	### Set the phenotype file:
 # ### AEGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegscombo_phenocov.sample"
 # ### AAAGS
-SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_phenocov.sample"
+# SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_phenocov.sample"
 # ### CTMMGS
-# SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_phenocov.sample"
+SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_phenocov.sample"
 #
 # REQUIRED: exclusion-lists 
 ### SampleID123X
@@ -112,68 +112,91 @@ SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_p
 ### SampleID123Z
 #
 # ### AEGS specific exclusion lists
-# ### EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION="EXCL_DEFAULT"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA.list
-# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_Females.list
-# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION="EXCL_MALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_Males.list
-# ### EXCLUSION="EXCL_CKD"
+# EXCLUSION="EXCL_CKD"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_CKD.list
-# ### EXCLUSION="EXCL_NONCKD"
+# EXCLUSION="EXCL_NONCKD"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonCKD.list	
-# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_T2D.list
-# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION="EXCL_NONT2D"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonT2D.list
-# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION="EXCL_SMOKER"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_SMOKER.list
-# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonSMOKER.list
-# ### EXCLUSION="EXCL_PRE2007"
+# EXCLUSION="EXCL_PRE2007"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_pre2007.list
-# ### EXCLUSION="EXCL_POST2007"
+# EXCLUSION="EXCL_POST2007"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_post2007.list
+# EXCLUSION="EXCL_DIURETICS"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_DIURETICS.list
+# EXCLUSION="EXCL_NONDIURETICS"
+# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_nonDIURETICS.list
 
 # ### AAAGS specific exclusion lists
-EXCLUSION="EXCL_DEFAULT"
-EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS.list"
-# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS.list"
+# EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Females.list"
-# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION="EXCL_MALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_Males.list"
-# ### EXCLUSION="EXCL_CKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_CKD.list"
-# ### EXCLUSION="EXCL_NONCKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonCKD.list"
-# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION="EXCL_CKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_CKD.list"
+# EXCLUSION="EXCL_NONCKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonCKD.list"
+# EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_T2D.list"
-# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION="EXCL_NONT2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonT2D.list"
-# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION="EXCL_SMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_SMOKER.list"
-# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonSMOKER.list"
+# EXCLUSION="EXCL_DIURETICS"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_DIURETICS.list"
+# EXCLUSION="EXCL_NONDIURETICS"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGS_nonDIURETICS.list"
+# EXCLUSION="EXCL_DEFAULT_NONAAA"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGSnonAAA.list"
 
 ### CTMMGS specific exclusion lists
-# ### EXCLUSION="EXCL_DEFAULT"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM.list"
-# ### EXCLUSION="EXCL_FEMALES"
+EXCLUSION="EXCL_DEFAULT"
+EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM.list"
+# EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_FEMALES.list"
-# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION="EXCL_MALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_MALES.list"
-# ### EXCLUSION="EXCL_CKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
-# ### EXCLUSION="EXCL_NONCKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
-# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION="EXCL_CKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
+# EXCLUSION="EXCL_NONCKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
+# EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_T2D.list"
-# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION="EXCL_NONT2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonT2D.list"
-# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION="EXCL_SMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_SMOKER.list"
-# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonSMOKER.list"
+# EXCLUSION="EXCL_DIURETICS"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_DIURETICS.list"
+# EXCLUSION="EXCL_NONDIURETICS"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonDIURETICS.list"
+# EXCLUSION="EXCL_CLOPIDOGREL"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CLOPIDOGREL.list"
+# EXCLUSION="EXCL_NONCLOPIDOGREL"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCLOPIDOGREL.list"
+# EXCLUSION="EXCL_NONLEIDEN"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonLEIDEN.list"
+# EXCLUSION="EXCL_NONLEIDENONLYCLOPIDOGREL"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonLEIDENonlyCLOPIDOGREL.list"
+
 
 # REQUIRED: ANALYSIS SPECIFIC ARGUMENTS
 # For per-variant analysis
@@ -189,14 +212,14 @@ STANDARDIZE="STANDARDIZE"
 # You can choose one of these options [expected/score] -- expected is likely best; refer to SNPTEST documentation.
 METHOD="expected"
 #
-# REQUIRED: For GWAS
+# REQUIRED: For GWAS -- make PLINK/this work with VCF files NEW VERSION
 CLUMP_P2="1"
 CLUMP_P1="0.000005" # should be of the form 0.005 rather than 5e-3
 CLUMP_R2="0.2"
 CLUMP_KB="500"
 CLUMP_FIELD="P"
 #
-# REQUIRED: For regional analysis
+# REQUIRED: For regional analysis -- handle this via a file! NEW VERSION
 CHR="1" # e.g. 1
 REGION_START="154376264" # e.g. 154376264
 REGION_END="154476264" # e.g. 154476264
@@ -214,16 +237,20 @@ CAF="0.005"
 BETA_SE="100"
 #
 ### SYSTEM REQUIRED | NEVER CHANGE
-OUTPUT_DIR=${PROJECT}/snptest_results 
-VARIANTID="2"
-PVALUE="17"
-RANGELZ=$(expr "$RANGE" / 1000)
+OUTPUT_DIR=${PROJECT}/snptest_results # review use of this considering the updates to scripts NEW VERSION
+VARIANTID="2" # this can handle by parseTable! NEW VERSION
+PVALUE="17" # this can handle by parseTable! NEW VERSION
+RANGELZ=$(expr "$RANGE" / 1000) # move this to the locuszoom-script! NEW VERSION
 #
-# REQUIRED: References -- new version will make these on the fly
+# REQUIRED: References -- these will be created upon installation
 # You can choose one of these options [1kGp3v5GoNL5/1kGp1v3/GoNL4].
 REFERENCE="1kGp3v5GoNL5"
 REFERENCEDATA="${GWASTOOLKITDIR}/RESOURCES/1000Gp3v5_EUR/1000Gp3v5.20130502.EUR"
-HG19_GENES="${GWASTOOLKITDIR}/RESOURCES/glist-hg19"
+# You can choose one of these: 
+# - refSeq based: refseq_GRCh37_hg19_Feb2009.txt.gz
+# - GENCODE based: gencode_v19_GRCh37_hg19_Feb2009.txt.gz
+# - PLINK-style gene list: glist-hg19.gz
+HG19_GENES="${GWASTOOLKITDIR}/RESOURCES/glist-hg19.gz"
 
 
 
