Edits to the configuration file to accomodate new conditional analysis function

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -65,16 +65,16 @@ MAILSETTINGS="a"
 #
 # ANALYSIS SETTINGS
 # REQUIRED: Path_to where the main alysis directory resides.
-PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/lookups/cyp2c19"
+PROJECTDIR="/hpc/dhl_ec/svanderlaan/projects/lookups/furin_fes_shuye_samani"
 #
 # REQUIRED: Name of the project.
-PROJECTNAME="CYP2C19"
+PROJECTNAME="FURIN_FES_CONDITIONAL_on_rs17514846"
 #
 # REQUIRED: Analysis settings.
 # You can choose one of these options [GWAS/VARIANT/REGION/GENES].
 ANALYSIS_TYPE="VARIANT"
 # You can choose one of these options [AEGS/AAAGS/CTMM].
-STUDY_TYPE="CTMM"
+STUDY_TYPE="AEGS"
 #
 # REQUIRED: give a list of covariates in a file
 # Example covariate-list format:
@@ -87,7 +87,7 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 # SPECIFIC DATA SETTINGS
 # REQUIRED: location of [imputed] data to use -- all BGEN-format.
 # ### AEGS, 1000G phase 3, GoNL5
-# IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
+IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegs_combo_1kGp3GoNL5_RAW_chr"
 # ### AEGS, 1000G phase 1
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_BBMRI_1000Gp1v3/aegs_combo_1000g_RAW_chr"
 # ### AEGS, GoNL4
@@ -95,25 +95,25 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
 # ### CTMMGS, 1000G phase 3, GoNL5
-IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_1kGp3GoNL5_RAW_chr"
+# IMPUTEDDATA="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_1kGp3GoNL5_RAW_chr"
 #
 # REQUIRED: location of sample file.
 	### Set the phenotype file:
 # ### AEGS
-# SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegscombo_phenocov.sample"
+SAMPLE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/aegscombo_phenocov.sample"
 # ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_phenocov.sample"
 # ### CTMMGS
-SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_phenocov.sample"
+# SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/ctmm_phenocov.sample"
 #
 # REQUIRED: exclusion-lists 
 ### SampleID123X
 ### SampleID123Y
 ### SampleID123Z
-
+#
 # ### AEGS specific exclusion lists
-# EXCLUSION="EXCL_DEFAULT"
-# EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA.list
+EXCLUSION="EXCL_DEFAULT"
+EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA.list
 # EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCEA_Females.list
 # EXCLUSION="EXCL_MALES"
@@ -166,37 +166,28 @@ SAMPLE_FILE="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGSnonAAA.list"
 
 ### CTMMGS specific exclusion lists
-EXCLUSION="EXCL_DEFAULT"
-EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM.list"
-# EXCLUSION="EXCL_FEMALES"
+# ### EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM.list"
+# ### EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_FEMALES.list"
-# EXCLUSION="EXCL_MALES"
+# ### EXCLUSION="EXCL_MALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_MALES.list"
-# EXCLUSION="EXCL_CKD" -- does not exist yet
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
-# EXCLUSION="EXCL_NONCKD" -- does not exist yet
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
-# EXCLUSION="EXCL_T2D"
+# ### EXCLUSION="EXCL_CKD" -- does not exist yet
+# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
+# ### EXCLUSION="EXCL_NONCKD" -- does not exist yet
+# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
+# ### EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_T2D.list"
-# EXCLUSION="EXCL_NONT2D"
+# ### EXCLUSION="EXCL_NONT2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonT2D.list"
-# EXCLUSION="EXCL_SMOKER"
+# ### EXCLUSION="EXCL_SMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_SMOKER.list"
-# EXCLUSION="EXCL_NONSMOKER"
+# ### EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonSMOKER.list"
 # EXCLUSION="EXCL_DIURETICS"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_DIURETICS.list"
 # EXCLUSION="EXCL_NONDIURETICS"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonDIURETICS.list"
-# EXCLUSION="EXCL_CLOPIDOGREL"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CLOPIDOGREL.list"
-# EXCLUSION="EXCL_NONCLOPIDOGREL"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCLOPIDOGREL.list"
-# EXCLUSION="EXCL_NONLEIDEN"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonLEIDEN.list"
-# EXCLUSION="EXCL_NONLEIDENONLYCLOPIDOGREL"
-# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonLEIDENonlyCLOPIDOGREL.list"
-
 
 # REQUIRED: ANALYSIS SPECIFIC ARGUMENTS
 # For per-variant analysis
@@ -208,9 +199,14 @@ EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoN
 VARIANTLIST="${PROJECTDIR}/variantlist.txt"
 #
 # REQUIRED: For GWAS, GENE, REGIONAL, and VARIANT analyses -- options: [STANDARDIZE/RAW]
-STANDARDIZE="STANDARDIZE"
-# You can choose one of these options [expected/score] -- expected is likely best; refer to SNPTEST documentation.
+STANDARDIZE="RAW"
+# REQUIRED: You can choose one of these method options [expected/score] -- expected is likely best; 
+# refer to SNPTEST documentation and more method options.
 METHOD="expected"
+# REQUIRED: You can indicate to condition on a (list of) variant(s) [NORMAL/CONDITION]; refer to SNPTEST documentation.
+CONDITION="CONDITION"
+# CONDITIONLIST="${PROJECTDIR}/conditionvariants.rs2521501.txt"
+CONDITIONLIST="${PROJECTDIR}/conditionvariants.rs17514846.txt"
 #
 # REQUIRED: For GWAS -- make PLINK/this work with VCF files NEW VERSION
 CLUMP_P2="1"
