Changed SNPTEST version

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -12,7 +12,8 @@ GWASTOOLKITDIR="${SOFTWARE}/GWASToolKit"
 #
 # REQUIRED: Path_to support programs on the server
 ### Set location of SNPTEST v2.5.2 & the method to be used.
-SNPTEST="${SOFTWARE}/snptest_v2.5.2_CentOS6.5_x86_64_static/snptest_v2.5.2"
+# SNPTEST="${SOFTWARE}/snptest_v2.5.2_CentOS6.5_x86_64_static/snptest_v2.5.2"
+SNPTEST="${SOFTWARE}/snptest_v2.5.4-beta3_linux_x86_64_static/snptest_v2.5.4-beta3"
 PLINK2="${SOFTWARE}/plink_v1.9"
 LOCUSZOOM13="/hpc/local/CentOS7/dhl_ec/software/locuszoom_1.3/bin/locuszoom"
 #
@@ -166,23 +167,23 @@ EXCLUSION_LIST=/hpc/dhl_ec/data/_ae_originals/AEGS_COMBINED_IMPUTE2_1000Gp3_GoNL
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/exclusion_nonAAAGSnonAAA.list"
 
 ### CTMMGS specific exclusion lists
-# ### EXCLUSION="EXCL_DEFAULT"
+# EXCLUSION="EXCL_DEFAULT"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM.list"
-# ### EXCLUSION="EXCL_FEMALES"
+# EXCLUSION="EXCL_FEMALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_FEMALES.list"
-# ### EXCLUSION="EXCL_MALES"
+# EXCLUSION="EXCL_MALES"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_MALES.list"
-# ### EXCLUSION="EXCL_CKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
-# ### EXCLUSION="EXCL_NONCKD" -- does not exist yet
-# ###EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
-# ### EXCLUSION="EXCL_T2D"
+# EXCLUSION="EXCL_CKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_CKD.list"
+# EXCLUSION="EXCL_NONCKD" -- does not exist yet
+# EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonCKD.list"
+# EXCLUSION="EXCL_T2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_T2D.list"
-# ### EXCLUSION="EXCL_NONT2D"
+# EXCLUSION="EXCL_NONT2D"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonT2D.list"
-# ### EXCLUSION="EXCL_SMOKER"
+# EXCLUSION="EXCL_SMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_SMOKER.list"
-# ### EXCLUSION="EXCL_NONSMOKER"
+# EXCLUSION="EXCL_NONSMOKER"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_nonSMOKER.list"
 # EXCLUSION="EXCL_DIURETICS"
 # EXCLUSION_LIST="/hpc/dhl_ec/data/_ctmm_originals/CTMMAxiomTX_IMPUTE2_1000Gp3_GoNL5/exclusion_nonCTMM_DIURETICS.list"
@@ -200,11 +201,11 @@ VARIANTLIST="${PROJECTDIR}/variantlist.txt"
 #
 # REQUIRED: For GWAS, GENE, REGIONAL, and VARIANT analyses -- options: [STANDARDIZE/RAW]
 STANDARDIZE="RAW"
-# REQUIRED: You can choose one of these method options [expected/score] -- expected is likely best; 
+# REQUIRED: You can choose one of these method options [expected/score/newml] -- expected is likely best; 
 # refer to SNPTEST documentation and more method options.
 METHOD="expected"
 # REQUIRED: You can indicate to condition on a (list of) variant(s) [NORMAL/CONDITION]; refer to SNPTEST documentation.
-CONDITION="CONDITION"
+CONDITION="NORMAL"
 # CONDITIONLIST="${PROJECTDIR}/conditionvariants.rs2521501.txt"
 CONDITIONLIST="${PROJECTDIR}/conditionvariants.rs17514846.txt"
 #
