--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -203,7 +203,10 @@ VARIANTLIST="${PROJECTDIR}/variantlist.txt"
 STANDARDIZE="RAW"
 # REQUIRED: You can choose one of these method options [expected/score/newml] -- expected is likely best; 
 # refer to SNPTEST documentation and more method options.
-METHOD="expected"
+# If you choose `-method newml`, you must supply the baseline-phenotype to which the other
+# discrete phenotypes are compared.
+METHOD="newml"
+BASELINEPHENOTYPE="control"
 # REQUIRED: You can indicate to condition on a (list of) variant(s) [NORMAL/CONDITION]; refer to SNPTEST documentation.
 CONDITION="NORMAL"
 # CONDITIONLIST="${PROJECTDIR}/conditionvariants.rs2521501.txt"
